feat: 메뉴 아이콘 SVG로 변경 및 이미지 파일을 WebP 형식으로 최적화

--- a/index.html
+++ b/index.html
@@ -74,16 +74,40 @@
             <li><a href="about.html">About us</a></li>
             <li><a href="index.html#best-sellers-section">Best Sellers</a></li>
             <li><a href="index.html#newsletter-section">Newsletter</a></li>
-            <li class="menu-icon"><img src="images/menu_icon.png" /></li>
+            <li class="menu-icon">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M3 12H21"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M3 6H21"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M3 18H21"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </li>
           </ul>
         </nav>
       </div>
     </header>
 
     <section class="hero">
-      <img class="desktop" src="images/Hero_Desktop.jpg" width="1440" height="600" loading="eager" />
-      <img class="mobile" src="images/Hero_Mobile.jpg" width="576" height="400" loading="eager" />
-      <img class="tablet" src="images/Hero_Tablet.jpg" width="960" height="500" loading="eager" />
+      <img class="desktop" src="images/Hero_Desktop.webp" width="1440" height="600" loading="eager" />
+      <img class="mobile" src="images/Hero_Mobile.webp" width="576" height="400" loading="eager" />
+      <img class="tablet" src="images/Hero_Tablet.webp" width="960" height="500" loading="eager" />
 
       <div class="hero-content">
         <div class="container">
@@ -103,7 +127,7 @@
         <div class="container">
           <div class="product new">
             <div class="product-picture">
-              <img src="images/vr1.jpg" alt="product: Penom Case" width="250" height="250" loading="lazy" />
+              <img src="images/vr1.webp" alt="product: Penom Case" width="250" height="250" loading="lazy" />
             </div>
             <div class="product-info">
               <h5 class="categories">Headsets, Apple</h5>
@@ -118,7 +142,7 @@
           <div class="product new">
             <div class="product-picture">
               <img
-                src="images/vr2.jpg"
+                src="images/vr2.webp"
                 alt="product: Noise Cancelling Headphone"
                 width="250"
                 height="250"
@@ -138,7 +162,7 @@
           <div class="product">
             <div class="product-picture">
               <img
-                src="images/vr3.jpg"
+                src="images/vr3.webp"
                 alt="product: Canon Digital SLR EOS Rebel T6"
                 width="250"
                 height="250"
