feat: 반응형 이미지 로딩을 위한 picture 요소 추가 및 이미지 소스 최적화

--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@
     </header>
 
     <section class="hero">
-      <img class="desktop" src="images/Hero_Desktop.webp" width="1440" height="600" loading="eager" />
-      <img class="mobile" src="images/Hero_Mobile.webp" width="576" height="400" loading="eager" />
-      <img class="tablet" src="images/Hero_Tablet.webp" width="960" height="500" loading="eager" />
+      <picture>
+        <source media="(min-width: 960px)" srcset="images/Hero_Desktop.webp" />
+        <source media="(min-width: 576px)" srcset="images/Hero_Tablet.webp" />
+        <img src="images/Hero_Mobile.webp" alt="VR Headset Hero Image" width="1440" height="600" loading="eager" />
+      </picture>
 
       <div class="hero-content">
         <div class="container">
