feat: 제품 이미지에 반응형 picture 요소 추가 및 alt 텍스트 수정

--- a/index.html
+++ b/index.html
@@ -129,7 +129,11 @@
         <div class="container">
           <div class="product new">
             <div class="product-picture">
-              <img src="images/vr1.webp" alt="product: Penom Case" width="250" height="250" loading="lazy" />
+              <picture>
+                <source media="(min-width: 960px)" srcset="images/vr1.webp" />
+                <source media="(min-width: 576px)" srcset="images/vr1.webp" />
+                <img src="images/vr1.webp" alt="Apple Headset" width="250" height="250" loading="lazy" />
+              </picture>
             </div>
             <div class="product-info">
               <h5 class="categories">Headsets, Apple</h5>
@@ -143,13 +147,11 @@
 
           <div class="product new">
             <div class="product-picture">
-              <img
-                src="images/vr2.webp"
-                alt="product: Noise Cancelling Headphone"
-                width="250"
-                height="250"
-                loading="lazy"
-              />
+              <picture>
+                <source media="(min-width: 960px)" srcset="images/vr2.webp" />
+                <source media="(min-width: 576px)" srcset="images/vr2.webp" />
+                <img src="images/vr2.webp" alt="Playstation Headset" width="250" height="250" loading="lazy" />
+              </picture>
             </div>
             <div class="product-info">
               <h5 class="categories">Headsets, PS</h5>
@@ -163,13 +165,11 @@
 
           <div class="product">
             <div class="product-picture">
-              <img
-                src="images/vr3.webp"
-                alt="product: Canon Digital SLR EOS Rebel T6"
-                width="250"
-                height="250"
-                loading="lazy"
-              />
+              <picture>
+                <source media="(min-width: 960px)" srcset="images/vr3.webp" />
+                <source media="(min-width: 576px)" srcset="images/vr3.webp" />
+                <img src="images/vr3.webp" alt="Oculus Headset" width="250" height="250" loading="lazy" />
+              </picture>
             </div>
             <div class="product-info">
               <h5 class="categories">Headsets, Oculus</h5>
