feat: Google Tag Manager 스크립트 제거 및 cookie consent 초기화 방식 변경

--- a/index.html
+++ b/index.html
@@ -18,62 +18,38 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vrheadsets.shop" />
-    <meta property="og:image" content="/images/og-image.jpg" />
     <title>Home - Tech Shop</title>
+
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Heebo:300,400,600,700&display=swap" as="style" />
     <link rel="preload" href="/css/styles.css" as="style" />
     <link href="https://fonts.googleapis.com/css?family=Heebo:300,400,600,700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <!-- <link rel="stylesheet" type="text/css" href="/css/slick.css"/> -->
-    <!-- Google Tag Manager -->
-    <script async>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, 'script', 'dataLayer', 'GTM-PKK35GL5');
-    </script>
-    <!-- End Google Tag Manager -->
 
     <!-- Cookie Consent by FreePrivacyPolicy.com https://www.FreePrivacyPolicy.com -->
     <script
+      defer
       type="text/javascript"
       src="//www.freeprivacypolicy.com/public/cookie-consent/4.1.0/cookie-consent.js"
       charset="UTF-8"
-      async
     ></script>
-    <script type="text/javascript" charset="UTF-8" async>
-      cookieconsent.run({
-        notice_banner_type: 'simple',
-        consent_type: 'express',
-        palette: 'light',
-        language: 'en',
-        page_load_consent_levels: ['strictly-necessary'],
-        notice_banner_reject_button_hide: false,
-        preferences_center_close_button_hide: false,
-        page_refresh_confirmation_buttons: false,
-        website_name: 'Performance Course',
+    <script defer type="text/javascript" charset="UTF-8">
+      document.addEventListener('DOMContentLoaded', function () {
+        cookieconsent.run({
+          notice_banner_type: 'simple',
+          consent_type: 'express',
+          palette: 'light',
+          language: 'en',
+          page_load_consent_levels: ['strictly-necessary'],
+          notice_banner_reject_button_hide: false,
+          preferences_center_close_button_hide: false,
+          page_refresh_confirmation_buttons: false,
+          website_name: 'Performance Course',
+        });
       });
     </script>
   </head>
 
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-PKK35GL5"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
     <header role="banner">
       <div class="container">
         <section class="logo">
@@ -163,17 +139,11 @@
           <div class="container">
             <div class="product new">
               <div class="product-picture">
-                <picture>
-                  <source media="(min-width: 960px)" srcset="images/vr1.webp" />
-                  <source media="(min-width: 576px)" srcset="images/vr1.webp" />
-                  <img
-                    src="images/vr1.webp"
-                    alt="Apple VR Headset - Premium virtual reality headset with advanced features"
-                    width="250"
-                    height="250"
-                    loading="lazy"
-                  />
-                </picture>
+                <img
+                  src="images/vr1.webp"
+                  alt="Apple VR Headset - Premium virtual reality headset with advanced features"
+                  loading="lazy"
+                />
               </div>
               <div class="product-info">
                 <h5 class="categories">Headsets, Apple</h5>
@@ -187,11 +157,7 @@
 
             <div class="product new">
               <div class="product-picture">
-                <picture>
-                  <source media="(min-width: 960px)" srcset="images/vr2.webp" />
-                  <source media="(min-width: 576px)" srcset="images/vr2.webp" />
-                  <img src="images/vr2.webp" alt="Playstation Headset" width="250" height="250" loading="lazy" />
-                </picture>
+                <img src="images/vr2.webp" alt="Playstation Headset" loading="lazy" />
               </div>
               <div class="product-info">
                 <h5 class="categories">Headsets, PS</h5>
@@ -205,11 +171,7 @@
 
             <div class="product">
               <div class="product-picture">
-                <picture>
-                  <source media="(min-width: 960px)" srcset="images/vr3.webp" />
-                  <source media="(min-width: 576px)" srcset="images/vr3.webp" />
-                  <img src="images/vr3.webp" alt="Oculus Headset" width="250" height="250" loading="lazy" />
-                </picture>
+                <img src="images/vr3.webp" alt="Oculus Headset" loading="lazy" />
               </div>
               <div class="product-info">
                 <h5 class="categories">Headsets, Oculus</h5>
