feat: 이미지 포맷을 WebP에서 AVIF로 변경 및 관련 파일 삭제

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
     <main>
       <section class="hero" aria-labelledby="hero-heading">
         <picture>
-          <source class="mobile" media="(max-width: 576px)" srcset="images/Hero_Mobile.webp" />
-          <source class="tablet" media="(max-width: 960px)" srcset="images/Hero_Tablet.webp" />
+          <source class="mobile" media="(max-width: 576px)" srcset="images/Hero_Mobile.avif" />
+          <source class="tablet" media="(max-width: 960px)" srcset="images/Hero_Tablet.avif" />
           <img
             class="desktop"
-            src="images/Hero_Desktop.webp"
+            src="images/Hero_Desktop.avif"
             alt="Immersive VR headset experience showcasing virtual reality technology"
             width="960"
             height="560"
@@ -141,7 +141,7 @@
             <div class="product new">
               <div class="product-picture">
                 <img
-                  src="images/vr1.webp"
+                  src="images/vr1.avif"
                   alt="Apple VR Headset - Premium virtual reality headset with advanced features"
                   loading="lazy"
                 />
@@ -158,7 +158,7 @@
 
             <div class="product new">
               <div class="product-picture">
-                <img src="images/vr2.webp" alt="Playstation Headset" loading="lazy" />
+                <img src="images/vr2.avif" alt="Playstation Headset" loading="lazy" />
               </div>
               <div class="product-info">
                 <h5 class="categories">Headsets, PS</h5>
@@ -172,7 +172,7 @@
 
             <div class="product">
               <div class="product-picture">
-                <img src="images/vr3.webp" alt="Oculus Headset" loading="lazy" />
+                <img src="images/vr3.avif" alt="Oculus Headset" loading="lazy" />
               </div>
               <div class="product-info">
                 <h5 class="categories">Headsets, Oculus</h5>
